--- a/Index.css
+++ b/Index.css
@@ -106,3 +106,36 @@ li{
   padding:15px 35px;
   border-radius: 8px;
 }
+
+#sobre{
+  color:black;
+}
+#manobras{
+  color: black;
+}
+#equipamentos{
+  color: black;
+}
+
+header{
+  text-align: center;
+  padding: 10px;
+  margin: 20px;
+}
+ 
+footer{
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  font-size: 0.8rem;
+  width: 100%;
+  border-top: 2px  solid #ff3c00;
+  background-color: #000;
+}
+
+#tail{
+ text-align: center;
+  position: absolute;
+  width: 50px;
+  border-radius: 20px;
+}
