--- a/Index.css
+++ b/Index.css
@@ -123,7 +123,7 @@ header{
 footer{
   text-align: center;
   position: fixed;
-  bottom: 0;
+  bottom: 0; /* Posição vertical*/
   font-size: 0.8rem;
   width: 100%;
   border-top: 2px  solid #ff3c00;
