--- a/Index.css
+++ b/Index.css
@@ -94,6 +94,7 @@ li{
 .equipamentos img{
  display: inline-block;
 }
+/* Links da pagina Equipamentos */
 .link{
   display: inline-block;
   text-decoration: none;
@@ -103,6 +104,7 @@ li{
   padding:15px 35px;
   border-radius: 8px;
 }
+
 
 #sobre{
   color:black;
@@ -130,6 +132,7 @@ footer{
   background-color: #000;
 }
 
+/* Ultimo link da pagina de Equipamentos */
 #tail{
  text-align: center;
   position: absolute;
